--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -55,7 +55,7 @@
           </div>
           <div class="row mt-3">
             <div class="col-6">
-              <a href="." class="text-light"><small>Register</small></a>
+              <a href="{% url 'signup' %}" class="text-light"><small>Register</small></a>
             </div>
             <div class="col-6 text-right">
               <a href="{% url 'password_reset' %}" class="text-light"><small>Forgot Password</small></a>
