--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -67,10 +67,10 @@
       <div class="row mt-3">
         <div class="col-3"></div>
         <div class="col-3">
-          <a href="." class="text-light"><small>Login</small></a>
+          <a href="{% url 'login' %}" class="text-light"><small>Login</small></a>
         </div>
         <div class="col-3 text-right">
-          <a href="." class="text-light"><small>Forgot Password</small></a>
+          <!-- <a href="." class="text-light"><small>Forgot Password</small></a> -->
         </div>
       </div>
 
