--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -23,12 +23,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
+ 
   <title>
-    Django Dashboard Argon - {% block title %} Open-Source Admin Panel {% endblock %} | AppSeed
+    ARPSMS - {% block title %} Ahero Rice Plantation Scheme Management {% endblock %} | System
   </title>
 
   <!-- Favicon - loaded as static -->
-  <link href="{% static 'assets/img/brand/favicon.png' %}" rel="icon" type="image/png">
+  <link href="{% static 'assets/img/brand/favicon.ico' %}" rel="icon" type="image/png">
   
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
