--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -34,7 +34,7 @@
             <div class=" dropdown-header noti-title">
               <h6 class="text-overflow m-0">Welcome!</h6>
             </div>
-            <a href="./examples/profile.html" class="dropdown-item">
+            <a href="{% url 'profile' %}" class="dropdown-item">
               <i class="ni ni-single-02"></i>
               <span>My profile</span>
             </a>
@@ -90,12 +90,12 @@
         <!-- Navigation -->
         <ul class="navbar-nav">
           <li class="nav-item  class=" active" ">
-          <a class=" nav-link active " href="/"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
+          <a class=" nav-link active " href="{% url 'index' %}"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/icons.html">
-              <i class="ni ni-planet text-blue"></i> Icons
+            <a class="nav-link" href="{% url 'farm' %}">
+              <i class="ni ni-planet text-blue"></i> Add Farm
             </a>
           </li>
           <li class="nav-item">
@@ -104,7 +104,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/profile.html">
+            <a class="nav-link " href="{% url 'profile' %}">
               <i class="ni ni-single-02 text-yellow"></i> User profile
             </a>
           </li>
