--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -108,7 +108,7 @@
                       <div class="form-group">
                         <label class="form-control-label" for="input-email">Email address</label>
                         <input type="email" id="input-email" class="form-control form-control-alternative" 
-                               placeholder="{{ request.user.email }}">
+                               value="{{ request.user.email }}">
                       </div>
                     </div>
                   </div>
@@ -116,7 +116,7 @@
                     <div class="col-lg-6">
                       <div class="form-group">
                         <label class="form-control-label" for="input-first-name">First name</label>
-                        <input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="{{ request.user.profile.other_name }}" >
+                        <input type="text" id="input-first-name" class="form-control form-control-alternative" value="{{ request.user.profile.other_name }}" >
                       </div>
                     </div>
                     <div class="col-lg-6">
@@ -129,57 +129,58 @@
                 </div>
                 <hr class="my-4" />
                 <!-- Address -->
-                <h6 class="heading-small text-muted mb-4">Contact information</h6>
+                <h6 class="heading-small text-muted mb-4">Other Information</h6>
                 <div class="pl-lg-4">
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-group">
                         <label class="form-control-label" for="input-address">Address</label>
-                        <input id="input-address" class="form-control form-control-alternative" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09" type="text">
+                        <input id="input-address" class="form-control form-control-alternative" value="Box 397.Ahero- Kenya" type="text">
                       </div>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-lg-4">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-city">City</label>
-                        <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="New York">
+                        <label class="form-control-label" for="input-city">Mobile No.</label>
+                        <input type="text" id="input-city" class="form-control form-control-alternative" value="{{ request.user.farm.mobile_number }}">
                       </div>
                     </div>
                     <div class="col-lg-4">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-country">Country</label>
-                        <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Country" value="United States">
+                        <label class="form-control-label" for="input-country">Caltivation Plan</label>
+                        <input type="text" id="input-country" class="form-control form-control-alternative" value="{{ request.user.farm.cultivation_plan }}">
                       </div>
                     </div>
                     <div class="col-lg-4">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-country">Postal code</label>
-                        <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
+                        <label class="form-control-label" for="input-country">Capital</label>
+                        <input type="text" id="input-postal-code" class="form-control form-control-alternative" value="{{ request.user.farm.capital }}">
                       </div>
                     </div>
                   </div>
                 </div>
+            
                 <hr class="my-4" />
                 <!-- Description -->
                 <h6 class="heading-small text-muted mb-4">Farm Information</h6>
                 <div class="row">
                     <div class="col-lg-4">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-city">Scheme</label>
-                        <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="Scheme" value="New York">
+                        <label class="form-control-label" for="input-farn_scheme">Scheme</label>
+                        <input type="text" id="input-city" class="form-control form-control-alternative" value="{{ request.user.farm.scheme }}">
                       </div>
                     </div>
                     <div class="col-lg-4">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-country">Farm Number</label>
-                        <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="Farm Number" value="United States">
+                        <label class="form-control-label" for="input-farm_name">Farm Name</label>
+                        <input type="text" id="input-country" class="form-control form-control-alternative" placeholder="{{ request.user.farm.farm_name }}">
                       </div>
                     </div>
                     <div class="col-lg-4">
                       <div class="form-group">
-                        <label class="form-control-label" for="input-country">Farm Supervisor</label>
-                        <input type="number" id="input-postal-code" class="form-control form-control-alternative" placeholder="Supervisor">
+                        <label class="form-control-label" for="input-farm_number">Farm Number</label>
+                        <input type="text" id="input-postal-code" class="form-control form-control-alternative" placeholder="{{ request.user.farm.farm_number }}">
                       </div>
                     </div>
                   </div>
