--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -111,7 +111,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/tables.html">
+            <a class="nav-link " href="{% url 'tables' %}">
               <i class="ni ni-bullet-list-67 text-info"></i> Tables
             </a>
           </li>
