activate and deactivate user

--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -95,7 +95,7 @@
           </li>
          
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'farm' %}">
+            <a class="nav-link" href="{% url 'app:farm' %}">
               <i class="ni ni-planet text-blue"></i> Add Farm
             </a>
           </li>
@@ -111,7 +111,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="{% url 'tables' %}">
+            <a class="nav-link " href=".">
               <i class="ni ni-bullet-list-67 text-info"></i> Tables
             </a>
           </li>
